# Transbomer_framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  eager_vs_numpy.py
docs/: README.md  background-knowledge.md  development-plan.md  project-introduction.md  stage-0-summary.md  stage-1-7-audit.md  stage-1-summary.md  stage-2-summary.md  stage-3-summary.md  stage-4-summary.md  stage-5-summary.md  stage-6-summary.md  stage-7-summary.md
examples/: README.md  binary_classification.py  linear_regression.py  multiclass_classification.py  rag_demo.py  sequence_classification.py  tensor_basics.py
examples/data/rag_docs/: autograd.md  serialization.md  transformer.md
src/minitensor/: __init__.py  autograd.py  errors.py  graph.py  nn.py  optim.py  rag.py  serialization.py  tensor.py  tools.py
tests/: test_autograd.py  test_examples.py  test_graph.py  test_nn.py  test_package.py  test_rag.py  test_stage6.py  test_tensor.py  test_transformer.py
